# project-discovery-web-apis

./: Dockerfile  README.md  logging.ini  main.py  pyproject.toml  settings.py  storage.db
dto_pack/: __init__.py  constants.py  dto.py
logs/: api.log.2022-11-18_00  api.log.2022-11-18_01  api.log.2022-11-18_16  api.log.2022-11-18_20  api.log.2022-11-18_22
processor/: errors.py  server.py
processor/tools/: nuclei.py  subfinder.py  templates.py
storage/: serializer.py  sqlite_db.py
storage/queries/: create_scanned_domains.sql  create_scanned_sub_domains.sql  fetch_all_scanned_domains.sql  fetch_one_scanned_domain.sql  fetch_one_vul_scanned_domain.sql  insert_scanned_domains.sql  insert_vul_scanned_domains.sql  update_specific_scanned_domain_status.sql
