[tool.poetry]
name = "project-discovery-web-apis"
version = "0.1.0"
description = ""
authors = ["mamsi <m.hossein95th@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.3"
uvloop = "^0.17.0"
aiosqlite = "^0.17.0"
aiofile = "^3.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
